<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2F1158"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/play_btn"
        android:layout_width="137dp"
        android:layout_height="58dp"
        android:layout_marginBottom="168dp"
        android:fontFamily="@font/aladin"
        android:text="@string/let_s_play"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/Quizzles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alata"
        android:text="@string/quizzes"
        android:textColor="#00F1C1"
        android:textSize="55sp"
        app:layout_constraintBottom_toTopOf="@+id/play_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.275" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="211dp"
        android:layout_height="210dp"
        android:layout_marginTop="96dp"
        android:contentDescription="@string/brain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/brain" />
</androidx.constraintlayout.widget.ConstraintLayout>